Fix the seven remaining lower-priority review findings
Addresses everything left from the 2026-09-16 external (Codex) review
round after the five highest-priority fixes (commit be9bfaa):

- witchhat.spark.drop_duplicates/aggregate stream per Arrow batch
  instead of buffering a whole partition into one RecordBatch first.
  drop_duplicates maintains a running per-partition {hash: [seen
  keys]} index (mirroring dedup.rs's own bucket-then-exact-compare
  design) with a new max_distinct_keys guard against an unexpectedly
  skewed partition. aggregate maintains a per-group merge state
  across batches (mean/avg requested as sum+count per batch and
  divided once at the end, since the mean of per-batch means is not
  the whole mean unless every batch is the same size). Both still
  emit exactly one witchhat.metrics event per partition.
- check_equivalence gained a real exact mode (EquivalenceMode in
  Rust, exact: bool at the Python boundary): sorts both sides' rows
  through arrow_row::RowConverter and compares them element-wise,
  populating EquivalenceReport.rows_exactly_match with a genuine
  proof of row-set equality instead of the fingerprint's
  collision-caveated evidence. Default stays fingerprint-only.
- clean.rs's docs now explain the Rust-regex-versus-Spark/Java-regex
  dialect gap explicitly (no lookaround, no backreferences), with a
  test confirming both are rejected at compile time.
- tools/spark_benchmark.py (new) times a complete Spark action
  through witchhat.spark against Spark's own native operator and
  prints both numbers honestly. On this local sandbox witchhat's
  mapInArrow path was 5.8x-7.6x slower at 50k rows, driven by
  JVM/Arrow conversion overhead, not kernel speed - a real,
  unflattering, now-visible number, not something to explain away.
- A new spark-integration CI job installs JDK 17 and pyspark and
  runs tools/spark_smoke.py against a real local Spark session,
  which was itself extended to cover multiple Arrow batches within
  one